Fix event ui and make it dropdown visible and remove past events

--- a/src/pages/user-home-page/user-events/style.css
+++ b/src/pages/user-home-page/user-events/style.css
@@ -1,6 +1,7 @@
 .upcoming-events {
   overflow: auto;
   white-space: nowrap;
+  margin-bottom: 20px;
 }
 .upcoming-event {
   width: 32%;
